<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilSearch"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_padding_default"
                android:layout_marginTop="@dimen/common_padding_lateral"
                app:layout_constraintEnd_toStartOf="@id/btnSearch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSearch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_search" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_padding_default"
                android:layout_marginVertical="@dimen/common_padding_min"
                android:paddingHorizontal="@dimen/common_padding_default"
                android:text="@string/btn_search"
                android:textSize="@dimen/font_size_btn"
                app:cornerRadius="@dimen/corner_radius"
                app:icon="@drawable/search_icon"
                app:iconGravity="textEnd"
                app:layout_constraintBottom_toBottomOf="@id/tilSearch"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tilSearch"
                app:layout_constraintTop_toTopOf="@id/tilSearch" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilResults"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="@dimen/actv_results"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_padding_default"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgCheck">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/actvResults"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_results"
                    android:inputType="none"
                    android:textAlignment="center" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilFilter"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_padding_default"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tilResults"
                app:layout_constraintTop_toBottomOf="@id/imgCheck">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/actvFilter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_filter"
                    android:inputType="none"
                    android:textAlignment="center" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvCheck"
                style="@style/TextViewBodyBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_padding_default"
                android:text="@string/text_filter_saved"
                app:layout_constraintBottom_toBottomOf="@id/imgCheck"
                app:layout_constraintEnd_toStartOf="@id/imgCheck"
                app:layout_constraintTop_toTopOf="@id/imgCheck" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imgCheck"
                android:layout_width="@dimen/check_size"
                android:layout_height="@dimen/check_size"
                android:layout_margin="@dimen/common_padding_default"
                android:src="@drawable/uncheck"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilSearch" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvComments"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/common_padding_default"
                app:layout_constraintTop_toBottomOf="@id/tilResults"
                tools:listitem="@layout/item_book" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPrevious"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_padding_default"
                android:layout_marginVertical="@dimen/common_padding_min"
                android:paddingHorizontal="@dimen/common_padding_default"
                android:text="@string/btn_previous"
                android:textSize="@dimen/font_size_btn"
                android:visibility="invisible"
                app:cornerRadius="@dimen/corner_radius"
                app:icon="@drawable/back_icon"
                app:iconGravity="textStart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btnNext"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvComments" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/common_padding_default"
                android:layout_marginVertical="@dimen/common_padding_min"
                android:paddingHorizontal="@dimen/common_padding_default"
                android:text="@string/btn_next"
                android:textSize="@dimen/font_size_btn"
                android:visibility="invisible"
                app:cornerRadius="@dimen/corner_radius"
                app:icon="@drawable/next_icon"
                app:iconGravity="textEnd"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btnPrevious"
                app:layout_constraintTop_toBottomOf="@id/rvComments" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>


